--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
         .menu-section.active {
             display: block;
         }
+        .menu-section.active {
+            display: block;
+        }
     </style>
 </head>
 <body>
@@ -146,7 +149,7 @@
         </div>
 
         <div id="datumo-1" class="menu-section">
-            <label>メニューをお選びください</label>
+            <label>オプションをお選びください</label>
             <div class="menu-sections">
                 <button type="button" onclick="selectSymptom(this)">【オプション】部分WAX：おでこ</button>
                 <button type="button" onclick="selectSymptom(this)">【オプション】部分WAX：もみあげ</button>
@@ -157,7 +160,7 @@
         </div>
 
         <div id="datumo-2" class="menu-section">
-            <label>メニューをお選びください</label>
+            <label>オプションをお選びください</label>
             <div class="menu-sections">
                 <button type="button" onclick="selectSymptom(this)">【オプション】部分WAX：おでこ</button>
                 <button type="button" onclick="selectSymptom(this)">【オプション】部分WAX：もみあげ</button>
@@ -169,7 +172,7 @@
 
 
         <div id="datumo-3" class="menu-section">
-            <label>メニューをお選びください</label>
+            <label>オプションをお選びください</label>
             <div class="menu-sections">
                 <button type="button" onclick="selectSymptom(this)">【オプション】部分WAX：おでこ</button>
                 <button type="button" onclick="selectSymptom(this)">【オプション】部分WAX：もみあげ</button>
@@ -178,7 +181,6 @@
                 <button type="button" onclick="selectSymptom(this)">【オプション】部分WAX：鼻毛</button>
             </div>
         </div>
-
 
 
         <label for="date1">第1希望日※必須<br>希望時間は30分単位でお願いします</label> <!-- 第1希望日時のラベル -->
