--- a/index.html
+++ b/index.html
@@ -59,6 +59,17 @@
             text-align: center;
             white-space: nowrap;
         }
+        .visit-buttons button, .symptoms button, .menu-sections button, .irradiations button {
+            flex: 1;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            background-color: #f7f7f7;
+            cursor: pointer;
+            box-sizing: border-box;
+            text-align: center;
+            white-space: nowrap;
+        }
         .visit-buttons button.active, .symptoms button.active, .menu-sections button.active, .irradiations button.active {
             background-color: #444;
             color: #fff;
@@ -83,9 +94,6 @@
         }
         .menu-section {
             display: none;
-        }
-        .menu-section.active {
-            display: block;
         }
         .menu-section.active {
             display: block;
