--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
         <div id="datumo-1" class="menu-section">
             <label>オプションをお選びください</label>
-            <div class="menu-sections">
+             <div class="symptoms">
                 <button type="button" onclick="selectSymptom(this)">【オプション】部分WAX：おでこ</button>
                 <button type="button" onclick="selectSymptom(this)">【オプション】部分WAX：もみあげ</button>
                 <button type="button" onclick="selectSymptom(this)">【オプション】部分WAX：鼻まわり</button>
@@ -158,7 +158,7 @@
 
         <div id="datumo-2" class="menu-section">
             <label>オプションをお選びください</label>
-            <div class="menu-sections">
+             <div class="symptoms">
                 <button type="button" onclick="selectSymptom(this)">【オプション】部分WAX：おでこ</button>
                 <button type="button" onclick="selectSymptom(this)">【オプション】部分WAX：もみあげ</button>
                 <button type="button" onclick="selectSymptom(this)">【オプション】部分WAX：鼻まわり</button>
@@ -170,7 +170,7 @@
 
         <div id="datumo-3" class="menu-section">
             <label>オプションをお選びください</label>
-            <div class="menu-sections">
+             <div class="symptoms">
                 <button type="button" onclick="selectSymptom(this)">【オプション】部分WAX：おでこ</button>
                 <button type="button" onclick="selectSymptom(this)">【オプション】部分WAX：もみあげ</button>
                 <button type="button" onclick="selectSymptom(this)">【オプション】部分WAX：鼻まわり</button>
