--- a/index.html
+++ b/index.html
@@ -132,16 +132,13 @@
             </div>
         </div>
        
-        <div id="aesthetic" class="menu-section">
-            <label>◆エステメニュー◆</label>
+        <div id="matugesonota" class="menu-section">
+            <label>♦︎その他まつげメニュー（まつげ・メイク）♦︎</label>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)">オーダーメイドfacialコース</button>
-                <button type="button" onclick="selectSymptom(this)">ボディトリートメント</button>
-                <button type="button" onclick="selectSymptom(this)">光フォトfacialコース</button>
-                <button type="button" onclick="selectSymptom(this)">エクソソームフェイシャル</button>
-                <button type="button" onclick="selectSymptom(this)">脱がない子宮温活</button>
-                <button type="button" onclick="selectSymptom(this)">フェムエステスタンダード</button>
-                <button type="button" onclick="selectSymptom(this)">フェムエステスペシャル</button>
+                <button type="button" onclick="selectSymptom(this)">ポイントメイク</button>
+                <button type="button" onclick="selectSymptom(this)">ヘアセット</button>
+                <button type="button" onclick="selectSymptom(this)">キッズヘアセット</button>
+                <button type="button" onclick="selectSymptom(this)">メイク</button>
             </div>
         </div>
 
